--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Author: Annalisa Scapolatiello
 Email: annalisa.scapolatiello@studenti.unipd.it
 
 
-# Intronomics-MIP Pipeline
+# **Intronomics-MIP Pipeline**
 
 
 ## Description
