--- a/README
+++ b/README
@@ -12,9 +12,6 @@ The Intronomics-MIP pipeline is designed to analyze multi-locus targeted sequenc
 - [Installation](#installation)
 - [Usage](#usage)
 - [Example](#example)
-- [Contributions](#contributions)
-- [License](#license)
-- [Contacts](#contacts)
 
 ## **Requirements**
 - Snakemake v7.32.4
@@ -23,11 +20,33 @@ The Intronomics-MIP pipeline is designed to analyze multi-locus targeted sequenc
 - SeekDeep v3.0.1
 
 ## **Installation**
-Provide instructions for installing the necessary dependencies.
 
 ```bash
 bash install_dep.sh
 
+## **Usage**
+Place your input files in the specified directory. The pipeline requires:
+FASTQ file with raw readings.
+A YAML configuration file to specify project parameters (e.g. file paths, library names, and filtering parameters).
+
+Start the pipeline with Snakemake:
+snakemake --cores 8
+
+The main outputs will be generated in the directory specified in config.yaml
+-FASTA files for each locus
+-Haplotype Coverage Table
+-Haplotype Genepop format table
+
+
+## **Example**
+
+Preparing Files Download the sample data and configuration file provided in the repository:
+
+git clone https://github.com/Nali-unipd/Intronomics-MIP.git
+cd Intronomics-MIP
+
+Execution Start the pipeline using the example configuration file:
+snakemake --cores 4 --configfile config_example.yaml
+
 
 Feel free to modify any part as needed! If you need more help or additional sections, just let me know.
-
