--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Author: Annalisa Scapolatiello
-Email: annalisa.scapolatiello@studenti.unipd.it
+### Author: Annalisa Scapolatiello  
+**Email:** annalisa.scapolatiello@studenti.unipd.it  
 
 
 # **Intronomics-MIP Pipeline**
